change UI, add storage.

--- a/MacNotesWidget/en.lproj/InfoPlist.strings
+++ b/MacNotesWidget/en.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
 /* Display name and description for this extension. */
-"CFBundleDisplayName" = "MacNotesWidget";
+"CFBundleDisplayName" = "MacNotes";
 "com.apple.notificationcenter.widget.description" = "Sample description";
 
